.. _mongodb-analyzer-changelog:

==========
What's New
==========

.. contents:: On this page
   :local:
   :backlinks: none
   :depth: 1
   :class: singlecol

Learn what's new in:

* :ref:`Version 1.4 <mongodb-analyzer-whats-new-1.4>`

.. _mongodb-analyzer-whats-new-1.4:

What's New in 1.4
-----------------

New features of the 1.4 {+product+} release include:

- Support for builders defined within variables. For example, the {+product-short+}
  analyzes the second line in the following code:

  .. code-block:: csharp
     :emphasize-lines: 2

     var movieFilterBuilder = Builders<Movie>.Filter;
     var filterReviews = movieFilterBuilder.Size(p => p.Reviews, 5);