@@ -1,6 +1,7 @@
 name = "visual-studio-extension"
 title = "C# Analyzer"
 toc_landing_pages = ["/analyze-code"]
+eol = true
 
 [constants]
 product = "MongoDB C# Analyzer"
@@ -22,3 +23,11 @@ query-api = "MongoDB Query API"
 driver-long = "MongoDB .NET/C# driver"
 driver-short = ".NET/C# driver"
 driver-docs = "https://www.mongodb.com/docs/drivers/csharp/current"
+
+[[banners]]
+targets = ["*"]
+variant = "info"
+value = """\
+    This version of the documentation is archived and no longer supported. View the `current documentation <https://www.mongodb.com/docs/mongodb-analyzer/current/>`__
+    to learn how to `install supported versions of the {+product+} <https://www.mongodb.com/docs/mongodb-analyzer/current/install/>`__.\
+    """
